[workspace]
members = ["crates/rf24-rs", "examples/rust", "bindings/python", "bindings/node", "crates/rf24ble-rs"]
default-members = ["crates/rf24-rs", "crates/rf24ble-rs", "examples/rust"]
resolver = "2"

[workspace.package]
repository = "https://github.com/nRF24/rf24-rs"
homepage = "https://nRF24.github.io/rf24-rs"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
strip = "symbols"
