[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rf24-py"
description = "A python package binding the nRF24/rf24-rs rust project."
requires-python = ">=3.8"
keywords = [
    "nrf24l01",
    "nRF24L01+",
    "raspberry",
    "pi",
    "linux",
    "driver",
    "radio",
    "transceiver",
    "RF24",
    # "RF24Network",
    # "RF24Mesh",
]
license = {text = "MIT"}
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
]
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://rf24-rs.readthedocs.io/en/latest"
Source =  "https://github.com/nRF24/rf24-rs"
Tracker = "https://github.com/nRF24/rf24-rs/issues"

[tool.mypy]
show_error_codes = true
pretty = true
files = [
    "examples/python/*.py",
    "rf24_py.pyi"
]

[tool.maturin]
manifest-path = "bindings/python/Cargo.toml"
include = [
    { path = "rf24_py.pyi", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]
