[package]
name = "rf24-rs"
description = "A pure-rust driver for the nRF24L01 wiresless tranceiver"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
exclude = [".github/", "codecov.yml", "docs", "examples"]
keywords = ["nrf24l01", "wireless", "transceiver", "embedded", "RF24"]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = "0.11.1"
