[package]
name = "rf24-node"
version = "0.3.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.80"

[lib]
crate-type = ["cdylib"]

[dependencies]
embedded-hal = "1.0.0"
# Default `napi` features: see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = "3.1.1"
napi-derive = "3.1.0"
rf24-rs = { path = "../../crates/rf24-rs", features = ["std"] }
rf24ble-rs = { path = "../../crates/rf24ble-rs", features = ["std"] }

[build-dependencies]
napi-build = "2.1.4"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = {version = "0.4.0", default-features = false, features = ["gpio_cdev", "spi"]}
nix = { version = "0.30.1", features = ["time"]}
