[package]
name = "rf24-py"
description = "A python binding for the rf24-rs library"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rf24_py"
crate-type = ["cdylib"]

[dependencies]
embedded-hal = "1.0.0"
pyo3 = {version = "0.22.5", features = ["extension-module"]}

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.4.0"
nix = { version = "0.29.0", features = ["time"]}
rf24-rs = { path = "../../crates/rf24-rs", features = ["std"]}
