[package]
name = "rf24-py"
description = "A python binding for the rf24-rs project"
version = "0.4.1"
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rf24_py"
crate-type = ["cdylib"]

[dependencies]
embedded-hal = "1.0.0"
pyo3 = {version = "0.26.0", features = ["extension-module", "abi3-py39"]}
rf24-rs = { path = "../../crates/rf24-rs", features = ["std"]}
rf24ble-rs = { path = "../../crates/rf24ble-rs", features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = {version = "0.4.0", default-features = false, features = ["gpio_cdev", "spi"]}
nix = { version = "0.30.1", features = ["time"]}
