[package]
name = "rf24-rs"
description = "A pure-rust driver for the nRF24L01 wireless transceiver"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
exclude = [".github/", "codecov.yml", "docs", "examples"]
keywords = ["nrf24l01", "wireless", "transceiver", "embedded", "RF24"]
categories = ["embedded", "no-std"]

[lib]
name = "rf24"

[dependencies]
bitfield-struct = "0.9.3"
defmt = {version = "0.3.10", optional = true}
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[features]
defmt = ["dep:defmt"]
std = []
default = []
