[package]
name = "rf24-rs"
description = "A pure-rust driver for the nRF24L01 wireless transceiver"
version = "0.3.1"
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
exclude = [".github/", "codecov.yml", "docs", "examples"]
keywords = ["nrf24l01", "wireless", "transceiver", "embedded", "RF24"]
categories = ["embedded", "no-std"]
rust-version = "1.68"

[lib]
name = "rf24"

[dependencies]
bitfield-struct = "0.9.5"
defmt = {version = "1.0.1", optional = true}
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = {git = "https://github.com/2bndy5/embedded-hal-mock.git", branch = "dev"}

[features]
defmt = ["dep:defmt"]
std = []
default = []
