[package]
name = "rf24ble-rs"
description = "A fake BLE implementation for the nRF24L01"
version = "0.1.4"
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
exclude = [".github/", "codecov.yml", "docs", "examples"]
keywords = ["nrf24l01", "wireless", "transceiver", "embedded", "BLE"]
categories = ["embedded", "no-std"]
rust-version = "1.65"

[lib]
name = "rf24ble"

[dependencies]
rf24-rs = { path = "../rf24-rs", version = "0.3.1" }
bitfield-struct = "0.9.5"
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = {git = "https://github.com/2bndy5/embedded-hal-mock.git", branch = "dev"}

[features]
std = []
default = []
