[package]
name = "examples"
version = "0.1.0"
edition.workspace = true
default-run = "getting-started"

[lib]
name = "rf24_rs_examples"

[dependencies]
rf24-rs = {path = "../../crates/rf24-rs", version = "0.3.1"}
rf24ble-rs = {path = "../../crates/rf24ble-rs", version = "0.1.4"}
embedded-hal = "1.0.0"
anyhow = {version = "1.0.98", default-features = false}
embassy-rp = {version = "0.4.0", optional = true}
embassy-sync = {version = "0.6.2", optional = true}
embassy-embedded-hal = {version = "0.3.0", optional = true}

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = {version = "0.4.0", optional = true, default-features = false, features = ["gpio_cdev", "spi"]}
rf24-rs = {path = "../../crates/rf24-rs", features = ["std"]}
rf24ble-rs = {path = "../../crates/rf24ble-rs", features = ["std"]}

[features]
default = ["rp2040"]
rp2040 = ["dep:embassy-rp", "dep:embassy-sync", "dep:embassy-embedded-hal", "rf24-rs/defmt"]

[[bin]]
name = "getting-started"
path = "src/bin/getting_started.rs"
test = false
bench = false

[[bin]]
name = "streaming-data"
path = "src/bin/streaming_data.rs"
test = false
bench = false

[[bin]]
name = "ack-payloads"
path = "src/bin/ack_payloads.rs"
test = false
bench = false

[[bin]]
name = "manual-ack"
path = "src/bin/manual_ack.rs"
test = false
bench = false

[[bin]]
name = "scanner"
path = "src/bin/scanner.rs"
test = false
bench = false

[[bin]]
name = "multiceiver"
path = "src/bin/multiceiver.rs"
test = false
bench = false

[[bin]]
name = "irq-config"
path = "src/bin/irq_config.rs"
test = false
bench = false

[[bin]]
name = "quick-config"
path = "src/bin/quick_config.rs"
test = false
bench = false

[[bin]]
name = "fake-ble"
path = "src/bin/fake_ble.rs"
test = false
bench = false
