[package]
name = "rf24-rs-examples"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
[dependencies]
rf24-rs = {path = "../../crates/rf24-rs"}
embedded-hal = "1.0.0"
anyhow = {version = "1.0.95", default-features = false}
linux-embedded-hal = {version = "0.4.0", optional = true, default-features = false, features = ["gpio_cdev", "spi"]}
embassy-rp = {version = "0.2.0", optional = true}
embassy-sync = {version = "0.6.1", optional = true}
embassy-embedded-hal = {version = "0.2.0", optional = true}

[features]
default = ["linux"]
# default = ["rp2040"]
rp2040 = ["dep:embassy-rp", "dep:embassy-sync", "dep:embassy-embedded-hal", "rf24-rs/defmt"]
linux = ["dep:linux-embedded-hal", "rf24-rs/std"]

[[bin]]
name = "getting-started"
path = "src/bin/getting_started.rs"
test = false
bench = false

[[bin]]
name = "streaming-data"
path = "src/bin/streaming_data.rs"
test = false
bench = false

[[bin]]
name = "ack-payloads"
path = "src/bin/ack_payloads.rs"
test = false
bench = false

[[bin]]
name = "manual-ack"
path = "src/bin/manual_ack.rs"
test = false
bench = false

[[bin]]
name = "scanner"
path = "src/bin/scanner.rs"
test = false
bench = false

[[bin]]
name = "multiceiver"
path = "src/bin/multiceiver.rs"
test = false
bench = false

[[bin]]
name = "irq-config"
path = "src/bin/irq_config.rs"
test = false
bench = false

[[bin]]
name = "quick-config"
path = "src/bin/quick_config.rs"
test = false
bench = false
